  * French templates thanks to 
    Philippe Batailler <pbatailler@teaser.fr> (closes: #138073)
  * some build cleanup
  * tfheen: Use libdebian-installer, thanks to thomas poindessous
  * tfheen: Add libdebian-installer-dev to build-depends.
  * tfheen: Change cdebconf-dev to libcdebconf-dev.
  * tfheen: Change maintainer to debian-boot, add David Kimdon and Tollef
    Fog Heen to Uploaders.
  * cjwatson: Correct dpkg-gencontrol call so it picks up ${shlibs:Depends}.

 -- Tollef Fog Heen <tfheen@debian.org>  Tue, 23 Jul 2002 22:22:03 +0200

netcfg (0.12) unstable; urgency=low

  * Make netcfg-static actually work by calling num2dot at most once per
    sprintf, since num2dot uses a static buffer.

 -- Tollef Fog Heen <tfheen@debian.org>  Tue, 29 Jan 2002 21:12:31 +0100

netcfg (0.11) unstable; urgency=low

  * use new dpkg features so build is less cludgy 
  * dhcp and static templates thanks to 
    ilgiz kalmetev <i.kalmetev@bis.bashtelecom.ru>
    (closes: #114843, #114844, #114845)

 -- David Kimdon <dwhedon@debian.org>  Mon,  7 May 2001 23:31:11 -0700

netcfg (0.10) unstable; urgency=low

  * fix broken handling of nameservers, build with cdebconf-dev. 

 -- David Whedon <dwhedon@debian.org>  Wed, 14 Feb 2001 20:33:40 -0800

netcfg (0.09) unstable; urgency=low

  * make necessary dirs at build time rather than runtime
  * call it dhclient rather than dhclient-2.2.x

 -- David Whedon <dwhedon@debian.org>  Tue,  6 Feb 2001 21:41:50 -0800

netcfg (0.08) unstable; urgency=low

  * route is now in /sbin 

 -- David Whedon <dwhedon@debian.org>  Wed, 31 Jan 2001 09:58:18 -0800

netcfg (0.07) unstable; urgency=low

  * if a gateway is specified, netcfg-static needs to add a default route 

 -- David Whedon <dwhedon@debian.org>  Tue, 30 Jan 2001 23:30:18 -0800

netcfg (0.06) unstable; urgency=low

  * added German translations from Michael Bramer <grisu@debian.org> 
    (Closes: #83153, #83159)
  * automatically choose between dhcp-client or pump
