@@ -72,9 +72,10 @@ binary-arch: build install
 	done ;
 
 	dh_installdebconf
-	cat debian/netcfg-common.templates \
+
+	(echo ; cat debian/netcfg-common.templates ) \
 	   >> debian/netcfg-static/DEBIAN/templates	
-	cat debian/netcfg-common.templates \
+	(echo ; cat debian/netcfg-common.templates )\
 	   >> debian/netcfg-dhcp/DEBIAN/templates	
 	cp debian/menutest-common debian/netcfg-dhcp/DEBIAN/menutest	
 	cp debian/menutest-common debian/netcfg-static/DEBIAN/menutest	
