@@ -9,6 +9,7 @@ netcfg (0.13) unstable; urgency=low
   * tfheen: Change cdebconf-dev to libcdebconf-dev.
   * tfheen: Change maintainer to debian-boot, add David Kimdon and Tollef
     Fog Heen to Uploaders.
+  * tfheen: Fix rules file to not munge the templates.
   * cjwatson: Correct dpkg-gencontrol call so it picks up ${shlibs:Depends}.
 
  -- Tollef Fog Heen <tfheen@debian.org>  Tue, 23 Jul 2002 22:22:03 +0200
